bucket_9B/libe-book
# Buildsheet autogenerated by ravenadm tool -- Do not edit.

NAMEBASE=		libe-book
VERSION=		0.1.3
KEYWORDS=		textproc
VARIANTS=		std
SDESC[std]=		Library for import of reflowable e-book formats
HOMEPAGE=		https://sourceforge.net/projects/libebook/
CONTACT=		nobody

DOWNLOAD_GROUPS=	main
SITES[main]=		SF/libebook/libe-book-0.1.3
DISTFILE[1]=		libe-book-0.1.3.tar.xz:main
DF_INDEX=		1
SPKGS[std]=		single

OPTIONS_AVAILABLE=	none
OPTIONS_STANDARD=	none

BUILD_DEPENDS=		boost-libraries:dev:std
			gperf:primary:std
			cppunit:single:std
			icu:dev:std
			librevenge:dev:std
BUILDRUN_DEPENDS=	icu:primary:std
			librevenge:primary:std
			liblangtag:primary:std

USES=			gmake libtool pkgconfig zlib mbsdfix
GNOME_COMPONENTS=	libxml2

FPC_EQUIVALENT=		textproc/libe-book

MUST_CONFIGURE=		gnu
CONFIGURE_ARGS=		--without-docs

INSTALL_TARGET=		install-strip
SOVERSION=		1.0.3
PLIST_SUB=		VER=0.1

[FILE:382:descriptions/desc.single]
libe-book is a library and a set of tools for reading and converting
various non-HTML reflowable e-book formats.

Currently supported are:
 - eReader .pdb
 - FictionBook v. 2 (including zipped files)
 - PalmDoc Ebook - Plucker .pdb
 - QiOO (mobile format, for java-enabled cellphones)
 - TCR (simple compressed text format)
 - TealDoc
 - zTXT
 - ZVR (simple compressed text format)


[FILE:101:distinfo]
7e8d8ff34f27831aca3bc6f9cc532c2f90d2057c778963b884ff3d1e34dfe1f9       416268 libe-book-0.1.3.tar.xz


[FILE:239:manifests/plist.single]
bin/
 ebook2html
 ebook2raw
 ebook2text
include/libe-book-%%VER%%/libe-book/
 EBOOKDocument.h
 libe-book.h
lib/
 libe-book-%%VER%%.so
 libe-book-%%VER%%.so.%%SOMAJOR%%
 libe-book-%%VER%%.so.%%SOVERSION%%
lib/pkgconfig/libe-book-%%VER%%.pc


[FILE:759:patches/patch-icu68]
Regressed by https://github.com/unicode-org/icu/commit/c3fe7e09d844

EBOOKCharsetConverter.cpp:127:7: error: use of undeclared identifier 'TRUE'
      TRUE, TRUE, &status)
      ^
EBOOKCharsetConverter.cpp:127:13: error: use of undeclared identifier 'TRUE'
      TRUE, TRUE, &status)
            ^

--- src/lib/EBOOKCharsetConverter.cpp.orig	2018-01-01 11:16:28 UTC
+++ src/lib/EBOOKCharsetConverter.cpp
@@ -124,7 +124,7 @@ bool EBOOKCharsetConverter::convertBytes(const char *c
       m_converterToUTF8.get(), m_converterToUnicode.get(),
       &outText, outText + out.size(), &inText, inText + length,
       nullptr, nullptr, nullptr, nullptr,
-      TRUE, TRUE, &status)
+      true, true, &status)
     ;
     if (status==U_BUFFER_OVERFLOW_ERROR)
     {

